--- a/promopay/www/views/app/shop/shop-sale.html
+++ b/promopay/www/views/app/shop/shop-sale.html
@@ -10,7 +10,7 @@
                 <h2 class="card-title">{{product.offer.h1}}</h2>
                 <p class="card-description"><b>€{{product.offer.val}}</b> - {{product.offer.h2}}</p>
                 <button ng-if="product.vchr !== null" class="button button-outline button-block button-assertive">
-                  <i class="icon ion-clock"></i> Expired Voucher
+                  <i class="icon ion-clock"></i> Used Coupon
                 </button>
               </div>
             </div>
