--- a/promopay/www/views/app/shop/shop-popular.html
+++ b/promopay/www/views/app/shop/shop-popular.html
@@ -25,14 +25,14 @@
           </p>
         </div>
       </div>
-      <div ng-repeat="product in products | orderBy:'product.valids[0].toT'" ng-if="product.vchr !== null && product.vchr.spends.length <= 0 ||  product.vchr === null || product.removed < 1" track by $index class="col col-100 shop-product-narrow-card">
+      <div ng-repeat="product in products | orderBy:'product.valids[0].toT'" ng-if="product.vchr === null || product.removed < 1" track by $index class="col col-100 shop-product-narrow-card">
         <div class="list">
           <div class="row vouchers">
             <div class="col-25 list-image" style="background-image: url(http://www.rglhosting2.com/validation.3.0.dag/images/vouchers/{{product.offer.imgName}})"></div>
             <div class="col-75">
               <div class="item item-body">
                 <h2 class="card-title">{{product.offer.h1}}</h2>
-                <p class="card-description">You Save: <b>€ {{product.offer.val}}</b></p>
+                <p class="card-description amount">You Save: <b>€ {{product.offer.val}}</b></p>
                 <p class="card-description">{{product.offer.h2}}</p>
                 <button ng-if="product.vchr === null" class="button button-outline button-block button-balanced" ng-click="showAddToCartPopup(product)">
                   <i class="icon ion-ios-checkmark"></i> Accept
@@ -44,7 +44,7 @@
                   <i class="icon ion-log-in"></i> View
                 </button>
                 <button ng-if="product.vchr.spends.length === 0" class="button button-outline button-block button-positive" ui-sref="app.product-detail({productId: product.id, productTitle: product.offer.val})">
-                  <i class="icon ion-log-in"></i> View Your Voucher
+                  <i class="icon ion-log-in"></i> View Your Offer
                 </button>
               </div>
             </div>
