--- a/promopay/www/views/auth/create-account.html
+++ b/promopay/www/views/auth/create-account.html
@@ -34,7 +34,10 @@
               <input type="email" placeholder="Email" name="email" ng-model="user.email" required>
             </label>
             <label class="item item-input">
-              <input type="tel" placeholder="Phone Number" name="phone" ng-model="user.phone" required>
+              <input type="email" placeholder="Verify Email" name="email" ng-model="user.email" required>
+            </label>
+            <label class="item item-input">
+              <input type="tel" placeholder="Phone Number (Optional)" name="phone" ng-model="user.phone">
             </label>
             <label class="item item-input">
               <input type="number" placeholder="Age" name="age" ng-model="user.age" required>
@@ -50,6 +53,9 @@
              </label>
             <label class="item item-input" show-hide-container>
               <input type="password" placeholder="Password" name="password" ng-model="user.password" required show-hide-input>
+            </label>
+            <label class="item item-input" show-hide-container>
+              <input type="password" placeholder="Verify Password" name="password" ng-model="user.password" required show-hide-input>
             </label>
             <button type="submit" class="sign-up button button-block" ng-click="doSignUp(user)" ng-disabled="signup_form.$invalid">
               Sign Up
