[impl-NA] Fuck.This.Shit

--- a/promopay/www/views/app/legal/faq.html
+++ b/promopay/www/views/app/legal/faq.html
@@ -1,6 +1,6 @@
 <ion-modal-view class="modal-view">
     <ion-header-bar>
-        <h1 class="title modal-title">FAQ</h1>
+        <h1 class="title modal-title">FAQ & Help</h1>
         <a class="button button-clear" ng-click="faq_modal.hide()">
             <span class="icon ion-close"></span>
         </a>
@@ -9,6 +9,13 @@
         <div class="row">
             <div class="col">
                 <div class="privacy-policy">
+                    <h4 class="title">Help</h4>
+                    <p>If you are unable to find the information required in our Terms and Conductions, FAQs or Privacy
+
+                        sections and/or any other sections of the PromoPay Mobile app please send your specific
+
+                        question(s) to info@PromotionalPayments.com.</p>
+
                     <h4 class="title">2.1 General FAQs</h4>
                     <p>Q: Is the PromoPay Mobile app site free to use?</p>
 
