--- a/promopay/www/views/app/profile/settings.html
+++ b/promopay/www/views/app/profile/settings.html
@@ -7,19 +7,11 @@
       </div>
       <a class="item item-icon-left settings-option" ng-click="showTerms()">
         <i class="icon ion-ios-information-outline"></i>
-        Terms of Service
-      </a>
-      <a class="item item-icon-left settings-option" ng-click="showPrivacyPolicy()">
-        <i class="icon ion-ios-locked-outline"></i>
-        Privacy Policy
+        Terms of Service & Privacy Policy
       </a>
       <a class="item item-icon-left settings-option" ng-click="showFAQ()">
         <i class="icon ion-ios-chatboxes-outline"></i>
-        FAQ
-      </a>
-      <a class="item item-icon-left settings-option" ng-click="showHelp()">
-        <i class="icon ion-ios-help-outline"></i>
-        Help
+        FAQ & Help
       </a>
       <a class="item item-icon-left settings-option" ng-click="logOut()">
         <i class="icon ion-ios-close-outline"></i>
