--- a/promopay/www/views/app/shop/product-detail.html
+++ b/promopay/www/views/app/shop/product-detail.html
@@ -26,17 +26,17 @@
       <p class="product-description padding-top">{{product.offer.h2}}</p>
     </div>
       <div class="item item-body">
-        <div class="barcodes">
+        <div class="barcodes text-center">
           <div class="human-code">
             <p class="product-description">
                 <strong>Human Readable Barcode</strong></br>
-                {{humanCode}}
+                <span class="humanCode">{{humanCode}}</span>
             </p>
           </div>
         </div>
       </div>
       <div class="item item-body">
-        <div class="barcodes">
+        <div class="barcodes text-center">
           <div class="qr-code">
             <p class="product-description">
                 <strong>QR Code</strong></br>
@@ -52,7 +52,7 @@
         </div>
       </div>
       <div class="item item-body">
-        <div class="barcodes">
+        <div class="barcodes text-center">
           <div class="machine-code">
             <p class="product-description">
                 <strong>Machine Readable Barcode</strong></br>
