--- a/promopay/www/views/app/shop/shop.html
+++ b/promopay/www/views/app/shop/shop.html
@@ -6,7 +6,7 @@
     <ion-tab title="Home" icon-on="ion-ios-home" icon-off="ion-ios-home-outline" ui-sref="app.shop.popular">
       <ion-nav-view name="shop-popular"></ion-nav-view>
     </ion-tab>
-    <ion-tab title="Wallet" icon-on="ion-ios-cart" icon-off="ion-ios-cart-outline" ui-sref="app.cart">
+    <ion-tab title="My Wallet" icon-on="ion-ios-cart" icon-off="ion-ios-cart-outline" ui-sref="app.cart">
       <ion-nav-view name="cart"></ion-nav-view>
     </ion-tab>
     <ion-tab title="History" icon-on="ion-ios-time" icon-off="ion-ios-time-outline" ui-sref="app.shop.sale">
