--- a/promopay/www/views/app/side-menu.html
+++ b/promopay/www/views/app/side-menu.html
@@ -40,7 +40,7 @@
             </ion-list>
           </div>
         </div>
-        <div class="row menu-bottom-options">
+        <!-- <div class="row menu-bottom-options">
           <div class="col col-bottom">
             <ion-list>
               <ion-item class="full-width-item" menu-close ui-sref="app.shop.home">
@@ -50,7 +50,7 @@
               </ion-item>
             </ion-list>
           </div>
-        </div>
+        </div> -->
       </div>
     </ion-content>
   </ion-side-menu>
