--- a/promopay/www/views/app/profile/profile.html
+++ b/promopay/www/views/app/profile/profile.html
@@ -1,4 +1,4 @@
-<ion-view ng-class="{'own-profile': myProfile}" class="profile-view" cache-view="false" view-title="Profile">
+<ion-view ng-class="{'own-profile': myProfile}" class="profile-view" cache-view="false" view-title="">
   <ion-content has-bouncing='false' class="profile-content" delegate-handle="profile-scroll">
     <div class="row profile-data">
       <div class="col">
@@ -54,7 +54,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row user-form">
       <div class="col">
         <div class="list">
           <label class="item item-input item-stacked-label">
