--- a/promopay/www/views/app/shop/cart.html
+++ b/promopay/www/views/app/shop/cart.html
@@ -25,7 +25,7 @@
                     <span class="product-price">Value: €{{product.offer.val}}</span>
                     <span class="product-price">{{product.vchr.validTxt}}</span>
                   </div>
-                  <div class="col col-50">
+                  <div class="col col-50 flex">
                     <button class="button button-outline button-assertive remove-product-button" ng-click="removeProductFromCart(product)">
                       <i class="icon ion-ios-close"></i> Remove
                     </button>
