--- a/promopay/www/views/app/shop/product-detail.html
+++ b/promopay/www/views/app/shop/product-detail.html
@@ -29,7 +29,7 @@
         <div class="barcodes text-center">
           <div class="human-code">
             <p class="product-description">
-                <strong>Human Readable Barcode</strong></br>
+                <strong>Your Offer Code</strong></br>
                 <span class="humanCode">{{humanCode}}</span>
             </p>
           </div>
